{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 15,
  "lineage": "6fd49369-d392-5e55-91f1-15f9f9d3f3c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wsvpc_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:862066027316:instance/i-08978134ab70822e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08978134ab70822e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "corp_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03eb58be5787db36c",
            "private_dns": "ip-172-168-1-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.1.57",
            "public_dns": "ec2-54-144-241-29.compute-1.amazonaws.com",
            "public_ip": "54.144.241.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0533a681b01b57d46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033c7bd1277fa0bc5",
            "tags": {
              "Name": "dev-instance"
            },
            "tags_all": {
              "Name": "dev-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b671409d086c76e5"
            ]
          },
          "dependencies": [
            "aws_subnet.session1",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "session_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:internet-gateway/igw-090bbccbce10a9cb6",
            "id": "igw-090bbccbce10a9cb6",
            "owner_id": "862066027316",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-04ec6b661d09faff6"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "session-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:route-table/rtb-03bc043c5ebf34ff7",
            "id": "rtb-03bc043c5ebf34ff7",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090bbccbce10a9cb6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-pub-rt"
            },
            "tags_all": {
              "Name": "dev-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ec6b661d09faff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.session_igw",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "session-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:route-table/rtb-0b37768a2b2d752ff",
            "id": "rtb-0b37768a2b2d752ff",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-pri-rt"
            },
            "tags_all": {
              "Name": "dev-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ec6b661d09faff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04aebb0653f416b3a",
            "route_table_id": "rtb-03bc043c5ebf34ff7",
            "subnet_id": "subnet-033c7bd1277fa0bc5"
          },
          "dependencies": [
            "aws_internet_gateway.session_igw",
            "aws_route_table.session-rt1",
            "aws_subnet.session1",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03735abde071b5de1",
            "route_table_id": "rtb-03bc043c5ebf34ff7",
            "subnet_id": "subnet-079e837662e0809bd"
          },
          "dependencies": [
            "aws_internet_gateway.session_igw",
            "aws_route_table.session-rt1",
            "aws_subnet.session2",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047bb4a2da1135e25",
            "route_table_id": "rtb-0b37768a2b2d752ff",
            "subnet_id": "subnet-01da411ea2f0ae8ce"
          },
          "dependencies": [
            "aws_route_table.session-rt2",
            "aws_subnet.session3",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047bb4a2da1135e25",
            "route_table_id": "rtb-0b37768a2b2d752ff",
            "subnet_id": "subnet-01da411ea2f0ae8ce"
          },
          "dependencies": [
            "aws_route_table.session-rt2",
            "aws_subnet.session3",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:security-group/sg-0e88dc9c4669a62e0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e88dc9c4669a62e0",
            "ingress": [],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "862066027316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pub-sg"
            },
            "tags_all": {
              "Name": "pub-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ec6b661d09faff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-033c7bd1277fa0bc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.168.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033c7bd1277fa0bc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pub-subnet1"
            },
            "tags_all": {
              "Name": "dev-pub-subnet1"
            },
            "vpc_id": "vpc-04ec6b661d09faff6"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-079e837662e0809bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.168.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079e837662e0809bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pub-subnet2"
            },
            "tags_all": {
              "Name": "dev-pub-subnet2"
            },
            "vpc_id": "vpc-04ec6b661d09faff6"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-01da411ea2f0ae8ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.168.3.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01da411ea2f0ae8ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pri-subnet1"
            },
            "tags_all": {
              "Name": "dev-pri-subnet1"
            },
            "vpc_id": "vpc-04ec6b661d09faff6"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-0f03989cfa99a9502",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.168.4.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f03989cfa99a9502",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pri-subnet2"
            },
            "tags_all": {
              "Name": "dev-pri-subnet2"
            },
            "vpc_id": "vpc-04ec6b661d09faff6"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "session",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:vpc/vpc-04ec6b661d09faff6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-08cd966c01baeaa4e",
            "default_route_table_id": "rtb-082f3181bd5ba3d6f",
            "default_security_group_id": "sg-0b671409d086c76e5",
            "dhcp_options_id": "dopt-04a1e7bf9456ee3aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ec6b661d09faff6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082f3181bd5ba3d6f",
            "owner_id": "862066027316",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}